# uni

./: adder_8h.html  adder_8h_source.html
Documents/: .gitignore
Documents/.github/workflows/: doxygen-deploy.yml
Documents/Worksheet4/calc/: CMakelists.txt  calc.cpp
Documents/Worksheet4/hello_cmake/: CMakeLists.txt
Documents/Worksheet7/WS7_GUI/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  option.cpp
Documents/Worrksheet6/WS6_GUI/: .gitignore  CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  option.h  option.ui
Documents/worksheet3/: adder.h  libadder.exp
Documents/worksheet3/adder_dynamic/lib/: libadder.lib
Documents/worksheet3/adder_static/lib/: libadder.lib
Documents/worksheet5/: CMakeLists.txt  adder.h  index.html
Documents/worksheet5/.github/workflows/: doxygen-deploy.yml
Documents/worksheet5/html/: adder_8h.html  adder_8h_source.html
Documents/worksheet5/latex/: adder_8h.tex  adder_8h_source.tex
